<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:inputType="text"
                android:hint="@string/date_format"
                android:imeOptions="actionNext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:inputType="text"
                android:hint="@string/date_format"
                android:imeOptions="actionNext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:inputType="number"
                android:imeOptions="actionNext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:inputType="number"
                android:imeOptions="actionNext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operator"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seats_number"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <EditText
                android:id="@+id/ev_seats_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="20sp"
                android:inputType="number"
                android:imeOptions="actionDone"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>