<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passport"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="6dp"/>

            <EditText
                android:id="@+id/ev_passport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:imeOptions="actionNext"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="6dp"/>

            <EditText
                android:id="@+id/ev_f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="6dp"/>

            <EditText
                android:id="@+id/ev_l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="6dp"/>

            <EditText
                android:id="@+id/ev_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"
                android:imeOptions="actionDone"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>